syntax = "proto3";

package files_events.v1;

option go_package = "github.com/bd878/gallery/server/api";

message FileUploaded {
	int64     id = 1;
	int64     user_id = 2;
	string    name = 3;
	string    description = 4;
	int64     size = 5;
	string    mime = 6;
	bool      private = 7;
}

message FileDeleted {
	int64     id = 1;
	int64     user_id = 2;
}

message FilePublished {
	int64     id = 1;
	int64     user_id = 2;
}

message FilePrivated {
	int64     id = 1;
	int64     user_id = 2;
}